Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129204

qgrpchttp2channel.cpp:19:10: fatal error: 'QtNetwork/qlocalsocket.h' file not found

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.8.1, 6.9.0 FF
    • 6.8.1, 6.9.0 FF
    • GRPC
    • None
    • VxWorks
    • c0713d661 (dev), 62047cfca (6.8)

    Description

      /home/qt/work/qt/qtgrpc/src/grpc/qgrpchttp2channel.cpp:19:10: fatal error: 'QtNetwork/qlocalsocket.h' file not found
        19 | #include <QtNetwork/qlocalsocket.h>
             |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
      1 error generated.
      

      Build log: https://testresults.qt.io/logs/qt/qtgrpc/40c03d84852bffd1b3911e6bc2fe2978e417c421/LinuxUbuntu_22_04x86_64LinuxVxWorksarmv7Clangqtci-linux-Ubuntu-22.04-x86_64-51-956369DoNotUploadTests_UseConfigure/1e2ccba6ab7babf49740ea036d09c0e9ee6dc975/build_1726854194/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtgrpc/tasks/1726854116

      Tested changes (refs/builds/qtci/dev/1726854115):
      https://codereview.qt-project.org/c/qt/qtgrpc/+/592587/2 Update dependencies on 'dev' in qt/qtgrpc

      Attachments

        For Gerrit Dashboard: QTBUG-129204
        # Subject Branch Project Status CR V

        Activity

          People

            semlanik Alexey Edelev
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes