Add the missing guards for QLocalSocket usages

Guard the QLocalSocket implementation in QGrpcHttp2Channel
with the respective feature condition.

Fixes: QTBUG-129204
Pick-to: 6.8 6.8.0
Change-Id: Ie4de6576318305194735d76b46db1475faff3fdb
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>